[package]
name = "hadar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = [
    "fs",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
warp = { version = "0.3", default_features = false }
rand = { version = "0.8", default_features = false, features = [
    "small_rng",
    "getrandom",
    "alloc",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", default_features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
] }
owo-colors = "4.0.0"
async-recursion = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = { version = "0.11.1", default_features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[[bin]]
name = "server"
harness = false
test = false
bench = false

[[bin]]
name = "move"
harness = false
test = false
bench = false

[[bin]]
name = "simulate"
harness = false
test = false
bench = false
